fix: use elementFromPoint to detect hover over transformed children and fixed-position image gap

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -59,7 +59,7 @@ main {
 	justify-content: right;
 	width: 400px;
 
-	&:hover {
+	&.hovered {
 		margin-right: 350px;
 
 		#card {
